--- a/playground/package.json
+++ b/playground/package.json
@@ -14,7 +14,7 @@
 		"@astrojs/tailwind": "^5.1.0",
 		"astro": "^4.7.0",
 		"astro-integration-kit": "^0.13.1",
-		"package-name": "workspace:*",
+		"astro-als": "workspace:*",
 		"tailwindcss": "^3.4.3"
 	},
 	"devDependencies": {
