--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"node": ">=18.19.0"
 	},
 	"scripts": {
-		"package:dev": "pnpm --filter package-name dev",
+		"package:dev": "pnpm --filter astro-als dev",
 		"playground:dev": "pnpm --filter playground dev",
 		"dev": "pnpm --stream -r -parallel dev",
 		"changeset": "changeset",
