--- a/package/package.json
+++ b/package/package.json
@@ -26,9 +26,17 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"default": "./dist/index.js"
-		}
+		},
+		"./config": {
+			"types": "./dist/config.d.ts",
+			"default": "./dist/config.js"
+		},
+		"./AlsSerialize.astro": "./assets/AlsSerialize.astro"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist",
+		"assets"
+	],
 	"scripts": {
 		"dev": "tsup --watch",
 		"build": "tsup"
@@ -38,7 +46,8 @@
 		"astro": "^4.0.0"
 	},
 	"dependencies": {
-		"astro-integration-kit": "^0.13.1"
+		"astro-integration-kit": "^0.13.1",
+		"vite": "^5.2.10"
 	},
 	"devDependencies": {
 		"tsup": "^8.0.2"
