--- a/playground/package.json
+++ b/playground/package.json
@@ -12,10 +12,12 @@
 	},
 	"dependencies": {
 		"@astrojs/tailwind": "^5.1.0",
+		"@astrojs/vue": "^4.1.0",
 		"astro": "^4.7.0",
-		"astro-integration-kit": "^0.13.1",
 		"astro-als": "workspace:*",
-		"tailwindcss": "^3.4.3"
+		"astro-integration-kit": "^0.13.1",
+		"tailwindcss": "^3.4.3",
+		"vue": "^3.4.26"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.5.10",
