--- a/package/package.json
+++ b/package/package.json
@@ -33,10 +33,7 @@
 		},
 		"./AlsSerialize.astro": "./assets/AlsSerialize.astro"
 	},
-	"files": [
-		"dist",
-		"assets"
-	],
+	"files": ["dist", "assets"],
 	"scripts": {
 		"dev": "tsup --watch",
 		"build": "tsup"
