--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,7 +13,8 @@
       "groupName": "all dependencies",
       "groupSlug": "all",
       "matchPackagePatterns": ["*"],
-      "schedule": ["before 4am on Monday"]
+      "schedule": ["before 4am on Monday"],
+      "rangeStrategy": "bump"
     }
   ]
 }
